# lib-invoice

./: README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
src/lib_invoice/: __init__.py  invoice.py
